ma entlich hon i den Schiss bug gefixed, wia dumm wor i den bitte. I gib mor di Kugel